--- a/templates/about.html
+++ b/templates/about.html
@@ -93,7 +93,50 @@
         <div class="content-h-separator row"></div>
 
         <div class="row center">
-            
+            <div id="about-content">
+                <div class="subtitle-text">
+                What is this?
+                </div>
+                <div class="indent">
+                    Audiosearch is a music search engine developed in the python web framework, Django, using the Echo Nest api.  This is my first project deployed on the web and my second substantial django project.  
+                </div>
+                <br />
+
+                <div class="subtitle-text">
+                I found a bug / I have a suggestion!
+                </div>
+                <div class="indent">
+                    Send an email to the address listed below.  I welcome all bug reports and criticism!
+                </div>
+                <br />
+
+                <div class="subtitle-text">
+                How to contact me:
+                </div>
+                <div class="indent">
+                    bradleydchambers@gmail.com
+                </div>
+                <br />
+
+                <div class="subtitle-text">
+                Source code:
+                </div>
+                <div class="indent">
+                    https://github.com/bchambs/audio_search
+                </div>
+                <br />
+
+                <div class="subtitle-text">
+                Technologies used:
+                </div>
+                <div class="indent">
+                    <ul>
+                        <li>Django web framework 1.6.2</li>
+                        <li>Echo Nest api</li>
+                        <li>Python 2.7.5</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div><!--END main-->
 
