--- a/templates/compare.html
+++ b/templates/compare.html
@@ -94,7 +94,11 @@
         <div class="content-h-separator row"></div>
 
         <div class="row center">
-            asdf
+            <div id="compare-content">
+                <div class="subtitle-text">
+                    This page is under construction.
+                </div>
+            </div>
         </div>
     </div><!--END main-->
 
