--- a/templates/about.html
+++ b/templates/about.html
@@ -93,12 +93,12 @@
         <div class="content-h-separator row"></div>
 
         <div class="row center">
-            <div id="about-content">
+            <div class="content-box">
                 <div class="subtitle-text">
                 What is this?
                 </div>
                 <div class="indent">
-                    Audiosearch is a music search engine developed in the python web framework, Django, using the Echo Nest api.  This is my first project deployed on the web and my second substantial django project.  
+                    Audiosearch is a music search engine developed in the Django web framework using the Echo Nest api.  This is my first project deployed on the web and my second substantial Django project.  
                 </div>
                 <br />
 
