--- a/templates/trending.html
+++ b/templates/trending.html
@@ -93,7 +93,7 @@
         <div class="content-h-separator row"></div>
 
         <div class="row center">
-            <div id="trending-content">
+            <div class="content-box">
                
             </div>
         </div>
