--- a/templates/compare.html
+++ b/templates/compare.html
@@ -94,7 +94,7 @@
         <div class="content-h-separator row"></div>
 
         <div class="row center">
-            <div id="compare-content">
+            <div class="content-box">
                 <div class="subtitle-text">
                     This page is under construction.
                 </div>
