--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
 
         <!--nav buttons-->
         <div class="row center">
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     home
@@ -54,7 +54,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.trending' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     trending
@@ -63,7 +63,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.artist_info' %}?q={{ featured_name.split|join:'+' }}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     featured
@@ -72,7 +72,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.compare' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     compare
@@ -81,7 +81,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.about' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     about
