--- a/templates/compare.html
+++ b/templates/compare.html
@@ -46,7 +46,7 @@
 
         <!--nav buttons-->
         <div class="row center">
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.index' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     home
@@ -55,7 +55,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.trending' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     trending
@@ -64,7 +64,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.artist_info' %}?q={{ featured_name.split|join:'+' }}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     featured
@@ -73,7 +73,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.compare' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     compare
@@ -82,7 +82,7 @@
 
             <div class="content-w-separator col-lg-1"></div>
 
-            <div class="nav-button col-lg-2 box">
+            <div class="nav-button col-lg-2">
                 <a href="{% url 'home.views.about' %}"><span class="nav-link"></span></a>
                 <div class="box-footer">
                     about
