--- a/templates/about.html
+++ b/templates/about.html
@@ -133,6 +133,7 @@
                     <ul>
                         <li>Django web framework 1.6.2</li>
                         <li>Echo Nest api</li>
+                        <li>Pyechonest library</li>
                         <li>Python 2.7.5</li>
                     </ul>
                 </div>
